[package]
name = "git_rs"
version = "0.1.0"
authors = ["cgiguere <c.giguere42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.38"
rust-ini = "0.16"
flate2 = "1.0"
rust-crypto = "^0.2"
strum = "0.20"
strum_macros = "0.20"
fastrand = "1.4.0"
glob = "0.3.0"
