[package]
name = "git_rs"
version = "0.1.0"
authors = ["cgiguere <c.giguere42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.38"
rust-ini = "0.16"
flate2 = "1.0"
rust-crypto = "^0.2"
strum = "0.20"
strum_macros = "0.20"
fastrand = "1.4.0"
dotenv = "0.15.0"
chrono = "0.4"
is_executable = "1.0.1"
pathdiff = "0.2.0"
velcro = "0.5.3"
log = "0.4"
env_logger = "0.8.3"
